<resources>
    <string name="app_name">PollProject</string>
    <string name="enter_a_question">Enter a Question...</string>
    <string name="enter_1st_answer">Enter 1st Answer...</string>
    <string name="enter_2nd_answer">Enter 2nd Answer...</string>
    <string name="enter_3rd_answer">Enter 3rd nAnswer...</string>
    <string name="enter_4th_answer">Enter 4th Answer...</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="please_select_an_option">Please Select an Option</string>
    <string name="create_quiz_poll">Create Quiz/Poll</string>
    <string name="view_active_quizzes_polls">View Active Quizzes/Polls</string>
    <string name="username">Username</string>
    <string name="greetings_welcome_to_the_real_time_polling_app">Greetings! Welcome to the Real-Time Polling App</string>
    <string name="pin">PIN</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="create">Create</string>
</resources>
